src/tests/snapshots/tests__layout_under_120_width_under_30_height-2.snap
---
source: src/tests/mod.rs
expression: "&terminal_draw_events_mirror[1]"
---
                          104Bps                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
 4                                                   1                     0Bps/33Bps                                  
 5                                                   1                     0Bps/25Bps                                  
 1                                                   1                     0Bps/24Bps                                  
 2                                                   1                     0Bps/22Bps                                  
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       

